--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,14 +1,14 @@
 version: "3.8"
 services:
   nginx:
-    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${APPLICATION_NAME}-nginx
+    image: 819701319605.dkr.ecr.us-east-1.amazonaws.com/test-nginx
     restart: always
     build:
       context: ./nginx
     ports:
       - "80:80"
   api:
-    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${APPLICATION_NAME}-api
+    image: 819701319605.dkr.ecr.us-east-1.amazonaws.com/test-api
     build:
         context: ./api
     volumes:
@@ -19,7 +19,7 @@ services:
     ports:
       - "5000:5000"
   client:
-    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${APPLICATION_NAME}-client
+    image: 819701319605.dkr.ecr.us-east-1.amazonaws.com/test-client
     build:
       context: ./client
     volumes:
